chore: add. comentários

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <!-- Barra de navegação da página -->
     <nav>
         <ul>
             <li><a href="#sobre">Sobre</a></li>
@@ -21,6 +22,7 @@
         </ul>
     </nav>
 
+    <!-- Seção de sobre mim -->
     <section id="sobre">
         <h2 style="margin-bottom: 2rem;">
             Olá <span style="font-size: larger;">👋</span> <br>
@@ -34,12 +36,14 @@
         </p>
     </section>
 
+    <!-- Seção de formação -->
     <section id="formacao">
         <h2>Formação</h2>
         <p>Possuo diploma de técnico em informática, alguns cursos avulsos e uma graduação em análise e desenvolvimento
             de sistemas em andamento, além de falar inglês em um nível básico e leitura em um nível intermediário.</p>
     </section>
 
+    <!-- Seção de portfólios com os os links para eles -->
     <section id="portfolio">
         <h2>Portfólio</h2>
         <div class="projeto">
@@ -65,6 +69,7 @@
         </div>
     </section>
 
+    <!-- Seção de contato com formulário -->
     <section id="contato">
         <h2>Contato</h2>
         <form action="">
